--- a/packages/tasks_api/pubspec.yaml
+++ b/packages/tasks_api/pubspec.yaml
@@ -8,7 +8,11 @@ environment:
 
 dependencies:
   uuid: ^3.0.6
+  json_annotation: ^4.4.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
