--- a/packages/sqlite_db_tasks_api/pubspec.yaml
+++ b/packages/sqlite_db_tasks_api/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   path_provider: ^2.0.11
+  uuid: ^3.0.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
